# discord-telegram-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: __init__.py  discord.py  logging.py  main.py  models.py  telegram.py
bot/core/: __init__.py  bot.py  broker.py  db.py  logging.py  models.py
scripts/: deploy.sh  install.sh  start.sh
