[project]
name = "discord-telegram-bot"
version = "0.0.1"
description = "A discord bot that forwards messages to telegram."
license = { text = "MIT" }
readme = "README.md"
authors = [
    {name = "Mohammed Fareed", email = "mohdf.fareed@icloud.com"}
]
urls = { repository = "https://github.com/mohdfareed/discord-telegram-bot" }

# MARK: Dependencies

requires-python = ">=3.12"

dependencies = [
    "pydantic",
    "pydantic-settings",
    "typer",
    "discord-py",
    "python-telegram-bot",
]

[project.optional-dependencies]
dev = [
    "pylance", # language server
    "black",   # code formatting
    "isort",   # import formatting
]

# MARK: Poetry

[project.scripts]
start-bot = "bot.main:app"

[tool.poetry]
packages = [
    { include = "bot", from = "." },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# MARK: Tools

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
